--- a/.github/workflows/build-python-images.yml
+++ b/.github/workflows/build-python-images.yml
@@ -6,11 +6,13 @@ on:
       - main
     paths:
       - "python/**"
+      - ".github/workflows/build-python-images.yml"
   pull_request:
     branches:
       - main
     paths:
       - "python/**"
+      - ".github/workflows/build-python-images.yml"
 
 jobs:
   Build:
