fix path to image in ghcr

--- a/.github/workflows/build-python-images.yml
+++ b/.github/workflows/build-python-images.yml
@@ -28,17 +28,17 @@ jobs:
         run: >-
           docker build 
           --build-arg VARIANT=3.10-bullseye
-          --tag ghcr.io/${GITHUB_REPOSITORY}/${{ github.event.repository.name }}/python:3.10
+          --tag ghcr.io/${GITHUB_REPOSITORY}/python:3.10
           -f python/Dockerfile .
       
       - name: Build 3.11 image
         run: >-
           docker build 
           --build-arg VARIANT=3.11-bullseye
-          --tag ghcr.io/${GITHUB_REPOSITORY}/${{ github.event.repository.name }}/python:3.11
+          --tag ghcr.io/${GITHUB_REPOSITORY}/python:3.11
           -f python/Dockerfile .
 
       - name: Push the Docker image
         run: |-
-          docker push ghcr.io/${GITHUB_REPOSITORY}/${{ github.event.repository.name }}/python:3.10
-          docker push ghcr.io/${GITHUB_REPOSITORY}/${{ github.event.repository.name }}/python:3.11
+          docker push ghcr.io/${GITHUB_REPOSITORY}/python:3.10
+          docker push ghcr.io/${GITHUB_REPOSITORY}/python:3.11
