--- a/.github/workflows/build-python-images.yml
+++ b/.github/workflows/build-python-images.yml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/login-action@f75d088332b07a08afadf6ac53c74509b9453f12 # date: 2022-11-05
         with:
           registry: ghcr.io
-          username: ${{ GITHUB_ACTOR }}
+          username: ${GITHUB_ACTOR}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up QEMU
