--- a/.github/workflows/build-python-images.yml
+++ b/.github/workflows/build-python-images.yml
@@ -56,6 +56,4 @@ jobs:
           file: python/Dockerfile
           platforms: linux/amd64,linux/arm64
           build-args: VARIANT="3.11-bullseye"
-          tags: ghcr.io/$repo/python:3.11
-        env:
-          repo: ${GITHUB_REPOSITORY}
+          tags: ${GITHUB_REPOSITORY}/python:3.11
