--- a/.github/workflows/build-python-images.yml
+++ b/.github/workflows/build-python-images.yml
@@ -56,4 +56,4 @@ jobs:
           file: python/Dockerfile
           platforms: linux/amd64,linux/arm64
           build-args: VARIANT="3.11-bullseye"
-          tags: "${GITHUB_REPOSITORY}/python:3.11"
+          tags: "${{ github.repository }}/python:3.11"
