--- a/.github/workflows/build-python-images.yml
+++ b/.github/workflows/build-python-images.yml
@@ -38,15 +38,15 @@ jobs:
         with:
           platforms: linux/amd64, linux/arm64
 
-      # - name: Build and push 3.10 image
-      #   uses: docker/build-push-action@175d02bffea74695e96b351069ac938b338802f9 # date: 2022-11-05
-      #   with:
-      #     context: .
-      #     push: true
-      #     file: python/Dockerfile
-      #     platforms: linux/amd64,linux/arm64
-      #     build-args: VARIANT="3.10-bullseye"
-      #     tags: ghcr.io/${GITHUB_REPOSITORY}/python:3.10
+      - name: Build and push 3.10 image
+        uses: docker/build-push-action@175d02bffea74695e96b351069ac938b338802f9 # date: 2022-11-05
+        with:
+          context: .
+          push: true
+          file: python/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          build-args: VARIANT=3.10-bullseye
+          tags: "${{ github.repository }}/python:3.10"
 
       - name: Build and push 3.11 image
         uses: docker/build-push-action@175d02bffea74695e96b351069ac938b338802f9 # date: 2022-11-05
