add install gh cli

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -7,11 +7,16 @@ ENV PYTHONUNBUFFERED 1
 # [Choice] Node.js version: none, lts/*, 16, 14, 12, 10
 ARG NODE_VERSION="lts/*"
 
+# Install Repo for Github CLI
+RUN curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \
+    && sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
+    && echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
+
 # Install fontconfig + Hack Nerd Font
-RUN apt-get update \
+RUN wget https://github.com/ryanoasis/nerd-fonts/releases/download/v2.2.2/Hack.zip \
     && mkdir -p /workspaces/app/ \
-    && apt-get -y install --no-install-recommends fontconfig bat exa \
-    && wget https://github.com/ryanoasis/nerd-fonts/releases/download/v2.2.2/Hack.zip \
+    && apt update && apt-get -y install --no-install-recommends fontconfig bat exa gh \
+    && ln -s /usr/bin/batcat /usr/bin/bat \
     && unzip Hack.zip -d /usr/share/fonts/truetype \
     && fc-cache -f -v
 
@@ -24,3 +29,7 @@ RUN apt-get autoremove -y \
     && apt-get clean -y \
     && rm -rf /var/lib/apt/lists/* \
     && rm -rf /tmp/pip-tmp
+
+USER vscode 
+RUN mkdir -p /home/vscode/.config/gh/ \
+    && mkdir -p /home/vscode/.config/vscode-dev-containers/
