--- a/.github/workflows/build-python-images.yml
+++ b/.github/workflows/build-python-images.yml
@@ -31,9 +31,7 @@ jobs:
       - name: List Python versions to build
         id: list-python-versions
         run: |
-          pythonVersions=$(cat $PYTHON_IMAGE_LOCATION/$PYTHON_VERSIONS_FILENAME)
-          pythonVersions="${pythonVersions//$'\n'/''}"
-          pythonVersions="${pythonVersions//$'\r'/''}"
+          pythonVersions=$(jq -c . < $PYTHON_IMAGE_LOCATION/$PYTHON_VERSIONS_FILENAME)
           echo "::set-output name=kafka-connect-versions::$pythonVersions"
 
   ListDebianVersionsToBuild:
@@ -47,12 +45,10 @@ jobs:
       - name: List debian versions to build
         id: list-debian-versions
         run: |
-          debianVersions=$(cat $PYTHON_IMAGE_LOCATION/$DEBIAN_VERSIONS_FILENAME)
-          debianVersions="${debianVersions//$'\n'/''}"
-          debianVersions="${debianVersions//$'\r'/''}"
+          debianVersions=$(jq -c . < $PYTHON_IMAGE_LOCATION/$DEBIAN_VERSIONS_FILENAME)
           echo "::set-output name=kafka-connect-versions::$debianVersions"
 
-  Build:
+  BuildPythonImages:
     runs-on: ubuntu-latest
 
     needs: [
