change python base image

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,6 +1,5 @@
-# Variant versions availables : https://mcr.microsoft.com/v2/vscode/devcontainers/python/tags/list
 ARG VARIANT="3"
-FROM mcr.microsoft.com/vscode/devcontainers/python:${VARIANT}
+FROM python:${VARIANT}
 
 ENV PYTHONUNBUFFERED 1
 
