fix path in react gh workflow

--- a/.github/workflows/build-react-images.yml
+++ b/.github/workflows/build-react-images.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - "python/**"
+      - "react/**"
       - ".github/workflows/build-react-images.yml"
   pull_request:
     branches:
