--- a/.github/workflows/build-react-images.yml
+++ b/.github/workflows/build-react-images.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   Build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - uses: actions/checkout@bf085276cecdb0cc76fbbe0687a5a0e786646936 # date: 2022-11-21
