--- a/.github/workflows/build-python-images.yml
+++ b/.github/workflows/build-python-images.yml
@@ -78,13 +78,13 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@38836d31bd1e0f8f29b8c7ad0412da32020f15b3 # date: 2022-11-05
         with:
-          platforms: ${{ env.TARGET_PLATFORMS}}
+          platforms: ${{ env.TARGET_PLATFORMS }}
 
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@39a1a82492fd1ad19af19d61b5f748e4cb6cd1af # date: 2022-11-05
         with:
-          platforms: ${{ env.TARGET_PLATFORMS}}
+          platforms: ${{ env.TARGET_PLATFORMS }}
 
       - name: Build and push ${{ matrix.python-version.version }}-${{ matrix.debian-version.version }} image
         uses: docker/build-push-action@175d02bffea74695e96b351069ac938b338802f9 # date: 2022-11-05
@@ -92,7 +92,7 @@ jobs:
           context: .
           push: true
           pull: true
-          file: python/Dockerfile
+          file: ${{ env.PYTHON_IMAGE_FOLDER }}/Dockerfile
           platforms: ${{ env.TARGET_PLATFORMS }}
           builder: ${{ steps.buildx.outputs.name }}
           build-args: VARIANT=${{ matrix.python-version.version }}-${{ matrix.debian-version.version }}
