--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -24,3 +24,5 @@ RUN apt-get autoremove -y \
     && apt-get clean -y \
     && rm -rf /var/lib/apt/lists/* \
     && rm -rf /tmp/pip-tmp
+
+WORKDIR /workspaces/app/
