--- a/.github/workflows/build-python-images.yml
+++ b/.github/workflows/build-python-images.yml
@@ -26,7 +26,7 @@ env:
 
 jobs:
   ListPythonVersionsToBuild:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     outputs:
       python-versions: ${{ steps.list-python-versions.outputs.python-versions }}
 
@@ -40,7 +40,7 @@ jobs:
           echo "python-versions=$pythonVersions" >> $GITHUB_OUTPUT
 
   ListDebianVersionsToBuild:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     outputs:
       debian-versions: ${{ steps.list-debian-versions.outputs.debian-versions }}
 
@@ -54,7 +54,7 @@ jobs:
           echo "debian-versions=$debianVersions" >> $GITHUB_OUTPUT
 
   BuildPythonImages:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     needs: [
       ListDebianVersionsToBuild, 
