--- a/.github/workflows/build-python-images.yml
+++ b/.github/workflows/build-python-images.yml
@@ -86,10 +86,6 @@ jobs:
         with:
           platforms: ${{ env.TARGET_PLATFORMS }}
 
-      - name: Pull Latest images
-        run: |
-          docker pull ${{ env.DOCKER_REGISTRY_ADDRESS }}/${{ env.DOCKER_IMAGE_NAME }}:${{ matrix.python-version.version }}-${{ matrix.debian-version.version }} || true
-
       - name: Build and push ${{ matrix.python-version.version }}-${{ matrix.debian-version.version }} image
         uses: docker/build-push-action@175d02bffea74695e96b351069ac938b338802f9 # date: 2022-11-05
         with:
@@ -100,5 +96,5 @@ jobs:
           platforms: ${{ env.TARGET_PLATFORMS }}
           builder: ${{ steps.buildx.outputs.name }}
           build-args: VARIANT=${{ matrix.python-version.version }}-${{ matrix.debian-version.version }}
-          cache-from: type=local,ref=${{ env.DOCKER_REGISTRY_ADDRESS }}/${{ env.DOCKER_IMAGE_NAME }}:${{ matrix.python-version.version }}-${{ matrix.debian-version.version }}
+          cache-from: type=registry,ref=${{ env.DOCKER_REGISTRY_ADDRESS }}/${{ env.DOCKER_IMAGE_NAME }}:${{ matrix.python-version.version }}-${{ matrix.debian-version.version }}
           tags: "${{ env.DOCKER_REGISTRY_ADDRESS }}/${{ env.DOCKER_IMAGE_NAME }}:${{ matrix.python-version.version }}-${{ matrix.debian-version.version }}"
